--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,3 +1,19 @@
+
+h1 {
+    color: darkslategray;
+    text-align: center;
+    font-weight: bolder;
+    text-transform: uppercase;
+    font-size: 50px;
+}
+
+.mainlist {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 600px;
+
+}
+
 .button-class {
     background-color: teal;
     border: none;
@@ -14,4 +30,72 @@
     background-color: white;
     color: black;
     border: 2px solid teal;
+}
+
+/* Modals and Dialogs*/
+
+#modal-container {
+    display: none;
+  }
+  
+  #modal-container.is-visible {
+    position: fixed;
+    padding: 20px;
+    box-sizing: border-box;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+  
+    /* to show it above other content */
+    z-index: 999; 
+  
+    /* to allow scrolling if the screen is not high enough*/
+    overflow: auto; 
+  
+    /* this is used to center the modal */
+    display: grid;
+    text-align: center;
+  }
+
+.modal {
+  margin: auto;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #f2f2fa;
+  padding: 20px;
+  width: 100%;
+  max-width: 700px;
+  text-align: center;
+  border-radius: 10px;
+  border: solid;
+}
+
+.modal-close {
+  float: right;
+  border: 0;
+  background: none;
+  color: #777;
+  font-weight: 900;
+  font-size: large;
+  cursor: pointer;
+}
+
+.modal h1 {
+  margin-top: 0;
+  font-size: 40px;
+}
+
+.modal p {
+  margin-bottom: 0;
+  font-weight: 900;
+  font-size: 25px;
+}
+
+.modal-img {
+    width: 150px;
+    height: 150px;
+    margin-left: 30px;
+    margin-top: -20px
 }
