--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,11 +7,10 @@ h1 {
     font-size: 50px;
 }
 
-.mainlist {
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600px;
-
+.pokemon-list {
+  list-style: none; /* Remove default bullet points */
+  padding: 0;
+  text-align: center; /* Center the list items */
 }
 
 .button-class {
@@ -36,66 +35,51 @@ h1 {
 
 #modal-container {
     display: none;
-  }
-  
-  #modal-container.is-visible {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
+    position:fixed;
+    z-index:9999; /* to show it above other content */
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    height: 100;
+    background-color: rgba(0, 0, 0, 0, 0.5)
+  }
   
-    /* to show it above other content */
-    z-index: 999; 
-  
-    /* to allow scrolling if the screen is not high enough*/
-    overflow: auto; 
-  
-    /* this is used to center the modal */
-    display: grid;
+  .modal-content {
+    position: relative;
+    margin: 10% auto;
+    padding: 20px;
+    width: 80%;
+    max-width: 600px;
+    background-color: #fff;
+    border-radius: 8px;
     text-align: center;
   }
 
-.modal {
-  margin: auto;
-  display: inline-block;
-  box-sizing: border-box;
-  background: #f2f2fa;
-  padding: 20px;
-  width: 100%;
-  max-width: 700px;
-  text-align: center;
-  border-radius: 10px;
-  border: solid;
-}
+  .modal-title {
+    font-size: 24px;
+    font-weight: bold;
+  }
 
-.modal-close {
-  float: right;
-  border: 0;
-  background: none;
-  color: #777;
-  font-weight: 900;
-  font-size: large;
-  cursor: pointer;
-}
+  .modal-height {
+    margin-top: 10px;
+  }
 
-.modal h1 {
-  margin-top: 0;
-  font-size: 40px;
-}
+  .modal-image {
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+  }
 
-.modal p {
-  margin-bottom: 0;
-  font-weight: 900;
-  font-size: 25px;
-}
+  .modal-close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
 
-.modal-img {
-    width: 150px;
-    height: 150px;
-    margin-left: 30px;
-    margin-top: -20px
-}
+    /* to allow scrolling if the screen is not high enough
+     overflow: auto; 
+  
+    /* this is used to center the modal 
+    display: grid;
+    text-align: center;
+     }*/
