--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,85 +1,284 @@
+/*
+  --text-color: #070808;
+  --page-background-color: #d4cdce;
+  --background-button-color: #f2f2f2;
+  --background-button-color-dark: #525161;
+  --background-button-hover-color: #ebe7e8;
+  --button-color: #fff;
+  --button-color1: #f95d9b; (Pink highlight)
+  --button-color2: #9bc400; (Grassy Green)
+  --button-color3: #39a0ca; (Bluewater lowlight)
+  --button-color4: #e0aaff; (light purple)
+  --button-color5: #ffa8B6; (Pink Sand)
+  --button-color6: #ffb766; (Grandpa Orange)
 
-h1 {
-    color: darkslategray;
-    text-align: center;
-    font-weight: bolder;
-    text-transform: uppercase;
-    font-size: 50px;
+
+/* ----------------------------------------------------------------------- */
+
+/* Font Name - Placeholder 
+@font-face {
+[placeholder]
+}*/
+
+/* Change Font later 
+@font-face {
+  [place-holder]
+} */
+
+/*
+@font-face {
+  [place-holder]
+} */
+
+/* Defined CSS Variables */
+:root {
+  --text-color: #070808;
+  --page-background-color: #d4cdce ;
+  --background-button-color: #f2f2f2;
+  --background-button-color-dark: #525161;
+  --background-button-hover-color: #ebe7e8;
+  --font-weight-normal: 400;
+  --font-weight-bold: 700;
+  --font-size-regular: 1rem;
+  --button-color: #fff;
+  --button-color1: #f95d9b;
+  --button-color2: #9bc400;
+  --button-color3: #39a0ca;
+  --button-color4: #c77dff;
+  --button-color5: #ffa8B6;
+  --button-color6: #ffb766;
 }
 
-.pokemon-list {
-  list-style: none; /* Remove default bullet points */
-  padding: 0;
-  text-align: center; /* Center the list items */
+/* Body styling */
+body {
+  /* Background & Font Styles */
+  background-color: var(--page-background-color);
+  /*font-family: [place-holder]*/
+  font-weight: var(--font-weight-normal);
+  font-size: var(--font-size-regular);
+  color: var(--text-color);
+  line-height: 1.4;
+  margin: 100px 60px 40px
 }
 
-.button-class {
-    background-color: teal;
-    border: none;
-    color: whitesmoke;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    cursor: pointer;
-    background-color: white;
-    color: black;
-    border: 2px solid teal;
+/* Pokemon Title Styling */
+.pokemon-title {
+ /*font-family: [place-holder]*/
+  font-size: 40px;
+  font-weight: var(--font-weight-normal);
+  color: var(--page-background-color)
 }
 
-/* Modals and Dialogs*/
+/* Navbar Styling */
+#showNumberInNavbar {
+  margin: 10px;
+  color: var(--button-color)
+}
 
-#modal-container {
-    display: none;
-    position:fixed;
-    z-index:9999; /* to show it above other content */
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100;
-    background-color: rgba(0, 0, 0, 0, 0.5)
-  }
-  
-  .modal-content {
-    position: relative;
-    margin: 10% auto;
-    padding: 20px;
-    width: 80%;
-    max-width: 600px;
-    background-color: #fff;
-    border-radius: 8px;
-    text-align: center;
+#navbarToggler {
+  justify-content: flex-end
+}
+
+/* Modal header styling */
+.modal-header h1 {
+  /*font-family: [placeholder] */
+  font-weight: var(--font-weight-normal);
+  color: var(--text-color);
+  font-size: 3rem
+}
+
+/* Modal body paragraph styling */
+.modal-body p {
+  font-size: 1.1rem;
+  font-weight: var(--font-weight-bold)
+}
+
+/*Styling for Pokemon abilities */
+.pokemonAbility {
+  display: inline-block;
+  padding: 5px 10px;
+  margin: 5px 5px;
+  background-color: var(--background-button-color)
+}
+
+/*Styling for Pokemon types */
+.pokemonTypes {
+  display: inline-block;
+  padding: 5px 10px;
+  margin: 5px 5px;
+  background-color: var(--button-color2)
+}
+
+/* Button for color variation */
+.color1Button {
+  border-color: var(--button-color1)
+}
+
+.color2Button {
+  border-color: var(--button-color2)
+}
+
+.color3Button {
+  border-color: var(--button-color3)
+}
+
+.color4Button {
+  border-color: var(--button-color4)
+}
+
+.color5Button {
+  border-color: var(--button-color5)
+}
+
+.color6Button {
+  border-color: var(--button-color6)
+}
+
+/* General button styling */
+ul .btn {
+  color: var(--text-color);
+  background-color: var(--background-button-color);
+  font-family: inherit;
+  font-weight: var(--font-weight-bold);
+  font-size: 1.2rem;
+  padding: 1rem .75rem;
+  border-width: 6px;
+  border-radius: 15px
+}
+
+/* Button hover effect */
+.btn:hover {
+  background-color: var(--background-button-hover-color);
+  border-color: var(--background-button-hover-color)
+}
+
+/* Styling for secondary buttons & search button */
+.btn-secondary,.searchButton {
+  font-size: var(--font-size-regular);
+  font-weight: var(--font-weight-bold);
+  color: var(--button-color);
+  background-color: var(--background-button-color-dark);
+  border: 0
+}
+
+/* Hover effect for secondary buttons & search button */
+.btn-secondary:hover,.searchButton:hover {
+  background-color: var(--text-color)
+}
+
+/* List group item styling */
+.list-group-item {
+  border: 0;
+  background-color: var(--page-background-color)
+}
+
+/* Styling for back to list and load more buttons */
+.backToList,.loadMoreButton {
+  font-family: inherit;
+  font-weight: var(--font-weight-bold);
+  font-size: 1.2rem;
+  padding: .5rem .75rem;
+  border-radius: 15px;
+  border-width: 0
+}
+
+.backToList {
+  background-color: var(--background-button-color-dark);
+  color: var(--page-background-color)
+}
+
+.loadMoreButton {
+  background-color: var(--background-button-color);
+  color: var(--text-color)
+}
+
+.backToList:focus,.backToList:active,.loadMoreButton:focus,.loadMoreButton:active {
+  border-width: 0;
+  border-color: var(--background-button-color)
+}
+
+.displayInfoText {
+  color: var(--text-color);
+  padding: 1rem;
+  font-size: 1.2rem;
+  font-weight: var(--font-weight-normal);
+  margin: 10px;
+  text-align: center
+}
+
+/* Styling for invisible class (display: none) */
+.invisible {
+  display: none
+}
+
+/* Imprint section styling */
+.imprint {
+  font-size: .9rem;
+  color: #656666;
+  text-align: center;
+  margin: 1rem
+}
+
+/* Media query for small screens (max-width: 720px) */
+@media all and (max-width: 720px) {
+  body {
+      padding:0 20px;
+      margin: 75px 30px 20px
   }
 
-  .modal-title {
-    font-size: 24px;
-    font-weight: bold;
+  #showNumberInNavbar {
+      margin: 8px;
+      font-size: 16px
   }
 
-  .modal-height {
-    margin-top: 10px;
+  .pokemon-title {
+      font-size: 35px
   }
 
-  .modal-image {
-    max-width: 100%;
-    height: auto;
-    margin-top: 20px;
+  .displayInfoText {
+      padding: 10px;
+      font-size: 1rem;
+      font-weight: var(--font-weight-normal);
+      margin: 6px
   }
 
-  .modal-close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
+  .modal-header h1 {
+      font-size: 2rem
+  }
+}
+
+/* Media query for extra small screens (max-width: 576px) */
+@media all and (max-width: 576px) {
+  body {
+      font-size:13pt;
+      padding: 0 20px;
+      margin: 65px 30px 20px
   }
 
-    /* to allow scrolling if the screen is not high enough
-     overflow: auto; 
-  
-    /* this is used to center the modal 
-    display: grid;
-    text-align: center;
-     }*/
+  .pokemon-title {
+      font-size: 28px
+  }
+
+  .displayInfoText {
+      padding: 10px;
+      font-size: 1rem;
+      font-weight: var(--font-weight-normal);
+      margin: 6px
+  }
+
+  .modal-header h1 {
+      font-size: 1.7rem
+  }
+
+  .listItemButton {
+      font-size: 1rem
+  }
+
+  ul {
+      padding: 5px
+  }
+
+  ul li {
+      margin: 10px 5px
+  }
+}
